# avaliacao-restaurantes

./: .coverage  .gitignore  Procfile  build.sh  pyproject.toml  readme.markdown  render.yaml  requirements.txt  run.py  seed.py  start.sh
.github/workflows/: ci.yml
.specs/: spec-conformidade-criterios.md  spec-perfil-usuario.md
app/: __init__.py  config.py  forms.py  models.py  validators.py
app/auth/: __init__.py  routes.py
app/avaliacoes/: __init__.py  routes.py
app/favoritos/: __init__.py  routes.py
app/restaurantes/: __init__.py  routes.py
app/static/js/: validacao.js
app/templates/: base.html
app/templates/auth/: cadastro.html  editar_perfil.html  login.html  perfil.html
app/templates/avaliacoes/: editar.html  nova.html
app/templates/erros/: 403.html  404.html  500.html
app/templates/favoritos/: listar.html
app/templates/restaurantes/: detalhe.html  listar.html  novo.html
docs/: arquitetura.md  documentacao-entrega.html  documentacao-entrega.md  implementacoes.md  mockup_restaurantes.html  modelos.md  proximos-passos-detalhado.md  proximos-passos.md  readme.md  rotas.md
migrations/versions/: 6c3518848aff_add_indexes_soft_delete_favorito_.py  b5a7b14cbacf_initial_schema.py  d95df8627e2c_add_foto_perfil_path_and_idade_to_.py
scripts/: empacotar.sh
tests/: conftest.py  test_auth.py  test_avaliacoes.py  test_deploy.py  test_models.py  test_perfil_expandido.py  test_restaurantes.py  test_robustez.py
